compiler/tests/fixtures/invalid/semantics/sifting_pattern_missing_actions.viv
// Sifting pattern with no actions field — should be rejected

pattern incomplete-pattern:
    roles:
        @actor:
            as: character
    conditions:
        @actor.trust > 0
